ListView and creation editing functional:

--- a/app/src/main/res/layout/activity_view_history.xml
+++ b/app/src/main/res/layout/activity_view_history.xml
@@ -7,7 +7,7 @@
     tools:context=".ViewHistoryActivity">
 
     <TextView
-        android:id="@+id/footerTextViewHistory"
+        android:id="@+id/viewHistoryFooter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -20,24 +20,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/viewHistoryRecycler"
+    <ListView
+        android:id="@+id/viewHistoryListView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/footerTextViewHistory"
+        app:layout_constraintBottom_toTopOf="@+id/viewHistoryFooter"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.708"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.496"
-        tools:itemCount="12"
-        tools:listitem="@layout/recycler_view_item_1">
+        app:layout_constraintTop_toTopOf="parent" />
 
-    </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
