--- a/app/src/main/res/layout/activity_edit_emotion.xml
+++ b/app/src/main/res/layout/activity_edit_emotion.xml
@@ -12,20 +12,21 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/EnterCommentHere"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toStartOf="@+id/editEmotionButton"
+        android:maxLength="100"
+        app:layout_constraintEnd_toStartOf="@+id/editEmotionSubmit"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editEmotionTitle" />
 
     <Button
-        android:id="@+id/editEmotionButton"
+        android:id="@+id/editEmotionSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -73,11 +74,26 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/editEmotionFooter"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/editEmotionDelete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.436"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editEmotionInput" />
+
+    <Button
+        android:id="@+id/editEmotionDelete"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
+        android:layout_marginBottom="16dp"
+        android:background="@android:color/holo_red_light"
+        android:text="@string/DeleteEmotion"
+        app:layout_constraintBottom_toTopOf="@+id/editEmotionFooter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
